# 20_prod

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: create_users.py  db.sqlite3  readme.txt
mysite/database/: db.sqlite3
mysite/mysite/: settings.py
mysite/shopapp/: forms — копия.py  forms.py  serializers.py  urls.py  views — копия.py  views.py
mysite/shopapp/templates/shopapp/: user_orders_list.html
